# mcp-server-sample

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
data/: incidents.db  load_db.py  sample_sop.txt  servicenow_incidents.csv  short_incidents.csv
mcp-server/: .gitignore  main.py  pyproject.toml  server.py
simple-mcp-server/: pyproject.toml  simple_mcp_server.py
