[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "mcp[cli]>=1.12.3",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "uvicorn>=0.35.0",
]
